dark mode border bottom fix on reviews page
Former-commit-id: 03c10e7c3b15f50f47aa6f5c5aec7d23fb2b32ce
Former-commit-id: 1c231411ea8e4d16666f31778bf4e3db179523da
Former-commit-id: 6907e2b060b9b1106fbaac230dd1114a3cb4e325
Former-commit-id: bde917e82d3b3d8c66fa4ad07727c7655d2603fc
Former-commit-id: 6d89aba5f44f2bad84ec7209cd26bfd0082a769b

--- a/assets/dark.css
+++ b/assets/dark.css
@@ -106,8 +106,8 @@
   background-color: #000;	
 }	
 
-.dark .yotpo .yotpo-nav ul .yotpo-nav-tab.yotpo-active .yotpo-nav-wrapper {
-  border-bottom: 3px solid #fff !important;
+.dark .yotpo .yotpo-nav ul .yotpo-nav-tab.yotpo-active .yotpo-nav-wrapper, .dark .product-info-tab:hover, .dark .product-info-tab-on {
+  border-bottom:4px solid #fff !important;
 }
 
 .dark .pot-col-100 img, .dark .shopify-section .section-confirm-subscription > img, .dark .intro img, .dark .openings img, .dark .opening img {
